# UrbanEYE

./: .gitignore  main.py  mlflow.db  pyproject.toml
data/raw/: sample_crimes.csv  weather_chicago.parquet
mlruns/0/: meta.yaml
mlruns/257832932030476508/: meta.yaml
mlruns/257832932030476508/010b8a0c7d4e4b159c5f2c8f739aa921/: meta.yaml
mlruns/257832932030476508/03ad9e8894114e66bd5a2337372d48e1/: meta.yaml
mlruns/257832932030476508/0bcd53ebac7043f7af45dce9c8fd28d9/: meta.yaml
mlruns/257832932030476508/0d4348dcd62b4ebd9d28558e2254dbbd/: meta.yaml
mlruns/257832932030476508/0eb7412b70304532aa9ea0c057ddf4f5/: meta.yaml
mlruns/257832932030476508/0f34f1897d6c44b28a5d484f8ef68530/: meta.yaml
mlruns/257832932030476508/1164b657738a4a9982a5e1c43b7a108e/: meta.yaml
mlruns/257832932030476508/15ff01eb007c4c50b93c5706ad5c773a/: meta.yaml
mlruns/257832932030476508/16af38b47e9843f99b44dd2cded3b68a/: meta.yaml
mlruns/257832932030476508/1cc33e95335f4d8186ecd548a988dd13/: meta.yaml
mlruns/257832932030476508/27c479e896ff4b99a56fd8d67651f3b5/: meta.yaml
mlruns/257832932030476508/30d757bd186a4fc4b75bdfe93d68adcc/: meta.yaml
mlruns/257832932030476508/38f8940f7b3b4aeab9a6f69d6d522243/: meta.yaml
mlruns/257832932030476508/3997dce708ed4ce386e1dab7604e27ba/: meta.yaml
mlruns/563724382391607637/: meta.yaml
models/: isolation_forest_model.pkl  xgb_model.pkl
src/api/: database.py  main.py
src/models/: evaluate.py  explain.py  isolation_forest.py  isolation_forest_model.pkl  train.py
src/pipeline/: features.ipynb  ingest.py
(+1278 files in other folders)
