[project]
name = "urbaneye"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "mlflow>=3.12.0",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "shap>=0.52.0",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
]
